--- a/app/src/main/res/layout/card_view_layout.xml
+++ b/app/src/main/res/layout/card_view_layout.xml
@@ -9,44 +9,92 @@
     app:cardElevation="4dp"
     app:cardUseCompatPadding="true">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="16dp">
 
-        <LinearLayout
-            android:id="@+id/linear_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="20dp"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imageViewChild"
-                android:layout_width="237dp"
-                android:layout_height="51dp"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center"
-                android:src="@drawable/user" />
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="Full Name" />
-
-        </LinearLayout>
-
-        <!-- New TextView for "Doctor is:" in the lower right corner -->
-        <TextView
-            android:id="@+id/textViewDoctor"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/linear_layout"
-            android:layout_alignParentEnd="true"
+        <ImageView
+            android:id="@+id/imageViewChild"
+            android:layout_width="110dp"
+            android:layout_height="110dp"
+            android:src="@drawable/user"
+            android:scaleType="centerCrop"
+            android:layout_gravity="center_vertical"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
-            android:text="Doctor is:" />
+            android:adjustViewBounds="true"
+            android:clipToOutline="true"
+            android:background="@android:color/transparent"
+            android:elevation="4dp"/>
 
-    </RelativeLayout>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/linear_layout_card"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="16dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
+            app:cardUseCompatPadding="true">
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/textViewFullName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignParentTop="true"
+                    android:text="Full Name"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />
+
+                <TextView
+                    android:id="@+id/textViewLocation"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/textViewFullName"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="8dp"
+                    android:text="Location"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+                <!-- New TextView for "DOB" -->
+                <TextView
+                    android:id="@+id/textViewDOB"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/textViewLocation"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="8dp"
+                    android:text="DOB: YYYY-MM-DD"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+                <TextView
+                    android:id="@+id/textViewDoctor"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/textViewDOB"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="8dp"
+                    android:text="Doctor is:"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+                <TextView
+                    android:id="@+id/status"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/textViewDoctor"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="8dp"
+                    android:visibility="gone"
+                    android:text="Status:"
+                    android:textAppearance="@style/TextAppearance.MaterialComponents.Body1" />
+
+            </RelativeLayout>
+        </com.google.android.material.card.MaterialCardView>
+    </LinearLayout>
 </androidx.cardview.widget.CardView>
