--- a/app/src/main/res/layout/fragment_today_patients.xml
+++ b/app/src/main/res/layout/fragment_today_patients.xml
@@ -33,11 +33,22 @@
 <!--            android:textStyle="bold" />-->
     </LinearLayout>
 
+
     <Spinner
         android:id="@+id/spinner2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp" />
+    <TextView
+        android:id="@+id/calendarDataTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Calendar Data"
+        android:padding="16dp"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:background="@color/light_gray"
+        android:textColor="@color/black" />
 
     <ScrollView
         android:layout_width="match_parent"
