--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="white_greyish">#EEEEEE</color>
     <color name="button_selectorcolor">#9E9E9E</color>
     <color name="red">#FF0000</color>
+    <color name="light_gray">#D3D3D3</color>  <!-- This is a light gray color -->
+    <color name="dark_gray">#A9A9A9</color>
 </resources>
